Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132755

External USB webcam has incorrect rotation applied

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.9
    • Multimedia
    • None
    • Motorla Razr 40 Ultra, Android 14
    • Android, iOS/tvOS/watchOS
    • 1187dde7d (dev), 3fd21835d (dev), e15fabf40 (6.9), a792fa63a (6.9), 7452bca93 (6.8), 8f3945cd8 (6.8)
    • Multimedia wk 5-6, Multimedia wk 7-8, Multimedia, weeks 9-10, Multimedia, weeks 11-12

      I was only able to reproduce this on one of my devices, as not all Android phones support external USB webcams.

      When using a USB external webcam, the reported frame orientation is incorrect and results in the frame being incorrectly oriented in UIs, such as the declarative-camera.

      This makes sense because, at the time of writing, we rely purely on the device orientation to give camera-frames their orientation in the implementation.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            npskalerud Nils Petter Skålerud
            npskalerud Nils Petter Skålerud
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: