Android, Camera, FFmpeg: Recognize external cameras

Currently the FFmpeg assumes all cameras have either front or
back-facing, and automatically assigns descriptions accordingly.
This assumption does not hold on mobile Android devices that support
external USB webcameras. It also does not hold on Android Automotive.

This patch modifies the code that determines camera position, and
assigns the position and description accordingly.

Pick-to: 6.9 6.8
Task-number: QTBUG-132755
Change-Id: I669dcd1a4441f75f8433ee85dc2fd982e8b555cb
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>